[workspace]
resolver = "2"

members = [
    "lib/sqlsync",
    "lib/sqlsync-worker/sqlsync-worker-crate",
    "lib/sqlsync-worker/test-reducer",
    "lib/sqlsync-reducer",
    "lib/sqlite-vfs",
    "lib/testutil",

    "demo/demo-reducer",
    "demo/cloudflare-backend",
]

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
futures = "0.3"
getrandom = "0.2"
js-sys = "0.3"
web-sys = "0.3"
log = "0.4"
rand = "0.8"
serde = "1.0"
simple_logger = "4.1"
thiserror = "1.0"
time = "0.3"
uuid = "1.4"
wasmi = "0.31"
worker = "0.0.18"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[workspace.dependencies.libsqlite3-sys]
git = "https://github.com/trevyn/rusqlite"
branch = "wasm32-unknown-unknown"
features = ["bundled"]

[workspace.dependencies.rusqlite]
git = "https://github.com/trevyn/rusqlite"
branch = "wasm32-unknown-unknown"
features = ["bundled"]
