[workspace]
resolver = "2"

members = [
    "lib/sqlsync",
    "lib/sqlsync-worker/sqlsync-wasm",
    "lib/sqlsync-reducer",
    "lib/sqlite-vfs",
    "lib/testutil",
    "lib/sqlsync-react/sqlsync-react-test-reducer",

    "demo/demo-reducer",
    "demo/cloudflare-backend",
]

[workspace.package]
authors = ["Carl Sverre", "orbitinghail"]
edition = "2021"
homepage = "https://sqlsync.dev"
license-file = "LICENSE"
repository = "https://github.com/orbitinghail/sqlsync"

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
futures = "0.3"
getrandom = "0.2"
js-sys = "0.3"
web-sys = "0.3"
log = "0.4"
rand = "0.8"
serde = "1.0"
simple_logger = "4.1"
thiserror = "1.0"
time = "0.3"
wasmi = "0.31"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
bs58 = "0.5"
hex = "0.4"
wasm-bindgen-futures = "0.4"
serde_bytes = "0.11"
worker = "0.0.18"
async-watch = "0.3"
async-lock = "2.8"
event-listener = "3.0"
sha2 = "0.10.8"

# specific revision of gloo needed for:
#  - access `TryFrom<web_sys::Websocket> for WebSocket`
#  - parse_message receiving a uint8array directly
# and the cloudflare compatibility fix for writing to a websocket
gloo = { git = "https://github.com/carlsverre/gloo", rev = "90f88e31daf1a9592c08c09375731166eeb8940e" }
gloo-net = { git = "https://github.com/carlsverre/gloo", rev = "90f88e31daf1a9592c08c09375731166eeb8940e" }

# specific revision of tsify needed for serde updates
tsify = { git = "https://github.com/carlsverre/tsify", rev = "c05a60b6ae15b2869bf63f618940dc56ef516d1d", default-features = false }

# required to use internally tagged enums with serde_bytes
serde-wasm-bindgen = { git = "https://github.com/carlsverre/serde-wasm-bindgen", rev = "638e36ea6c6334a709c582961cf457ed712d84b3" }

[workspace.dependencies.libsqlite3-sys]
git = "https://github.com/trevyn/rusqlite"
branch = "wasm32-unknown-unknown"
features = ["bundled"]

[workspace.dependencies.rusqlite]
git = "https://github.com/trevyn/rusqlite"
branch = "wasm32-unknown-unknown"
features = ["bundled", "hooks", "modern_sqlite"]
