[workspace]
resolver = "2"

members = [
    "lib/sqlsync",
    "lib/sqlsync-worker/sqlsync-wasm",
    "lib/sqlsync-reducer",
    "lib/sqlite-vfs",
    "lib/testutil",

    "examples/reducer-guestbook",

    "demo/demo-reducer",
    "demo/cloudflare-backend",
]

[workspace.package]
authors = ["Carl Sverre", "orbitinghail"]
edition = "2021"
homepage = "https://sqlsync.dev"
license = "Apache-2.0"
repository = "https://github.com/orbitinghail/sqlsync"
version = "0.3.0"

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
futures = "0.3"
getrandom = "0.2"
js-sys = "0.3"
web-sys = "0.3"
log = "0.4"
rand = "0.8"
serde = "1.0"
simple_logger = "4.1"
thiserror = "1.0"
time = "0.3"
wasmi = "0.31"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
bs58 = "0.5"
hex = "0.4"
wasm-bindgen-futures = "0.4"
serde_bytes = "0.11"
worker = "0.0.18"
event-listener = "3.0"
sha2 = "0.10.8"
serde-wasm-bindgen = "0.6"

# specific revision of tsify needed for serde updates
tsify = { git = "https://github.com/siefkenj/tsify", rev = "145ed4c8ef6417003e182fad41d1c0f26ed645e5", default-features = false }

# specific revision of gloo needed for:
#  - parse_message receiving a uint8array directly
#  - cloudflare compatibility fix for writing to a websocket
[workspace.dependencies.gloo]
git = "https://github.com/carlsverre/gloo"
rev = "8f48a39a0a1e126e3c455525d5b4c51487102333"
features = ["futures"]

[workspace.dependencies.libsqlite3-sys]
git = "https://github.com/trevyn/rusqlite"
features = ["bundled", "wasm32-unknown-unknown-openbsd-libc"]
# on branch: https://github.com/trevyn/rusqlite/tree/wasm32-unknown-unknown
rev = "504eff51ece3e4f07b2c01c57e2e06602f63bb01"

[workspace.dependencies.rusqlite]
git = "https://github.com/trevyn/rusqlite"
features = ["bundled", "hooks", "modern_sqlite"]
# on branch: https://github.com/trevyn/rusqlite/tree/wasm32-unknown-unknown
rev = "504eff51ece3e4f07b2c01c57e2e06602f63bb01"
