[package]
name = "sqlite-vfs"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Build SQLite virtual file systems (VFS) by implementing a simple Rust trait."
repository = "https://github.com/rkusa/sqlite-vfs"
documentation = "https://docs.rs/sqlite-vfs"
keywords = ["sqlite", "vfs"]

[dependencies]
getrandom = { version="0.2.4", features = ["js"] }
libsqlite3-sys = { git = "https://github.com/trevyn/rusqlite", branch = "wasm32-unknown-unknown", features = ["bundled"] }
log = "0.4"
rand = "0.8"
time = "0.3"