[package]
name = "sqlite-vfs"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Build SQLite virtual file systems (VFS) by implementing a simple Rust trait."
repository = "https://github.com/rkusa/sqlite-vfs"
documentation = "https://docs.rs/sqlite-vfs"
keywords = ["sqlite", "vfs"]

[dependencies]
getrandom = { workspace = true, features = ["js"] }
log.workspace = true
rand.workspace = true
time.workspace = true
libsqlite3-sys.workspace = true
