[package]
name = "sqlsync-reducer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
bincode.workspace = true
futures.workspace = true
log.workspace = true

wasmi = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[features]
default = ["guest"]
host = ["wasmi", "thiserror"]
guest = []

[dev-dependencies]
wasmi = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
simple_logger.workspace = true

[[example]]
name = "guest"
crate-type = ["cdylib"]

[[example]]
name = "host"
required-features = ["host"]
