[package]
name = "sqlsync-reducer"
resolver = "2"
version = "0.1.0"
description = "SQLSync is a collaborative offline-first wrapper around SQLite. A SQLSync Reducer is responsible for executing mutations on the database both locally and on the server."

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
bincode.workspace = true
futures.workspace = true
log.workspace = true

wasmi = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[features]
default = ["guest"]
host = ["wasmi", "thiserror"]
guest = []

[dev-dependencies]
wasmi = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
simple_logger.workspace = true

[[example]]
name = "guest"
crate-type = ["cdylib"]

[[example]]
name = "host"
required-features = ["host"]
