[package]
name = "sqlsync-wasm"
version = "0.1.0"
authors = ["Carl Sverre <carl@orbitinghail.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
log = { version="0.4.19", features=["std"] }
anyhow = "1.0.71"

sqlsync = { path = "../sqlsync" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.64"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
testutil = { path = "../testutil" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true