[package]
name = "sqlsync"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sqlite-vfs = { path = "../sqlite-vfs" }
log = "0.4.14"
anyhow = "1.0.40"
rand = "0.8.4"
time = "0.3"
wasmi = { version = "0.31.0" }
thiserror = "1.0.43"
serde = { version = "1.0.171", features = ["derive"] }

[dependencies.sqlsync-reducer]
path = "../sqlsync-reducer"
default-features = false
features = ["host"]

[dependencies.libsqlite3-sys]
git = "https://github.com/trevyn/rusqlite"
branch = "wasm32-unknown-unknown"
features = ["bundled"]

[dependencies.rusqlite]
git = "https://github.com/trevyn/rusqlite"
branch = "wasm32-unknown-unknown"
features = ["bundled"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.64"

[dev-dependencies]
testutil = { path = "../testutil" }
futures = "0.3.28"
simple_logger = "4.1.0"
bincode = "1.3.3"
anyhow = { version = "1.0.40", features = ["backtrace"] }

[dev-dependencies.sqlsync-reducer]
path = "../sqlsync-reducer"
default-features = true
features = ["host"]

[[example]]
name = "task-reducer"
crate-type = ["cdylib"]

[[example]]
name = "counter-reducer"
crate-type = ["cdylib"]
