[package]
name = "sqlsync"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sqlite-vfs = { path = "../sqlite-vfs" }
log.workspace = true
anyhow.workspace = true
rand.workspace = true
time.workspace = true
wasmi.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
libsqlite3-sys.workspace = true
rusqlite.workspace = true

[dependencies.sqlsync-reducer]
path = "../sqlsync-reducer"
default-features = false
features = ["host"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true

[dev-dependencies]
testutil = { path = "../testutil" }
futures.workspace = true
simple_logger.workspace = true
bincode.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }

[dev-dependencies.sqlsync-reducer]
path = "../sqlsync-reducer"
default-features = true
features = ["host"]

[[example]]
name = "task-reducer"
crate-type = ["cdylib"]

[[example]]
name = "counter-reducer"
crate-type = ["cdylib"]
