[package]
name = "sqlsync"
resolver = "2"
description = "SQLSync is a collaborative offline-first wrapper around SQLite. It is designed to synchronize web application state between users, devices, and the edge."

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sqlite-vfs = { path = "../sqlite-vfs" }
log.workspace = true
rand.workspace = true
time.workspace = true
wasmi.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
bs58.workspace = true
hex.workspace = true
libsqlite3-sys.workspace = true
rusqlite.workspace = true

[dependencies.sqlsync-reducer]
path = "../sqlsync-reducer"
default-features = false
features = ["host"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true

[dev-dependencies]
testutil = { path = "../testutil" }
futures.workspace = true
simple_logger.workspace = true
bincode.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }

[dev-dependencies.sqlsync-reducer]
path = "../sqlsync-reducer"
default-features = true
features = ["host"]

[[example]]
name = "task-reducer"
crate-type = ["cdylib"]

[[example]]
name = "counter-reducer"
crate-type = ["cdylib"]

[[example]]
name = "hello-reducer"
crate-type = ["cdylib"]
