[package]
name = "sqlsync-worker-crate"
version = "0.1.0"
authors = ["Carl Sverre <carl@orbitinghail.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.87", features = [] }
js-sys = "0.3.64"
log = { version = "0.4.19", features = ["std"] }
anyhow = "1.0.71"
bincode = "1.3.3"
thiserror = "1.0.43"
serde = { version = "1.0.171", features = ["derive"] }

sqlsync = { path = "../../sqlsync" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`.
console_error_panic_hook = { version = "0.1.7" }

[dependencies.web-sys]
version = "0.3.64"
features = ["console"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true
