[package]
name = "sqlsync-worker-crate"
version = "0.1.0"
authors = ["Carl Sverre <carl@orbitinghail.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
log = { workspace = true, features = ["std"] }
anyhow.workspace = true
bincode.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
uuid.workspace = true
console_error_panic_hook.workspace = true

sqlsync = { path = "../../sqlsync" }

[dependencies.web-sys]
workspace = true
features = ["console"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true
